Switch to Java 24 and update all dependencies