@@ -12,24 +12,12 @@ subprojects {
     }
 
     tasks.withType<JavaCompile> {
-        sourceCompatibility = JavaVersion.VERSION_21.toString()
-        targetCompatibility = JavaVersion.VERSION_21.toString()
+        sourceCompatibility = JavaVersion.VERSION_24.toString()
+        targetCompatibility = JavaVersion.VERSION_24.toString()
         options.encoding = "UTF-8"
     }
 
     tasks.withType<Test> {
         useJUnitPlatform()
-    }
-
-    tasks.withType<JavaCompile> {
-        options.compilerArgs?.addAll(listOf("--enable-preview"))
-    }
-
-    tasks.withType<Test> {
-        jvmArgs = listOf("--enable-preview")
-    }
-
-    tasks.withType<JavaExec> {
-        jvmArgs = listOf("--enable-preview")
     }
 }
